<resources>
    <string name="app_name">VisionSDK</string>
    <string name="manufacturer_bene_check">百捷（Bene Check）</string>
    <string name="manufacturer_hmd">HMD生物医学（HMD BioMedical Inc.）</string>
    <string name="manufacturer_yi_cheng">怡成（Yi Cheng）</string>
    <string name="select_factory">Please select a test strip manufacturer:</string>
    <string name="select_test_code">Please select the test strip calibration code:</string>
    <string name="blood_sugar_result_">Blood sugar result: --</string>
    <string name="blood_sugar_result">Blood sugar result:</string>
    <string name="waiting_for_calibration">waiting for calibration</string>
    <string name="start_measure">start measuring</string>
    <string name="end_measure">end measurement</string>
    <string name="calibration_failed">Calibration failed</string>
    <string name="waot_insert_strip">Waiting for the test strip to be inserted</string>
    <string name="waiting_blood">waiting for the blood to drip</string>
    <string name="wait_calculation">waiting for calculation results</string>
    <string name="blood_sugar_test_over">Blood sugar test is over</string>
    <string name="test_strip_used">The test strip has been used</string>
    <string name="test_strip_is_pulled">The test strip is pulled out, please insert the test strip</string>
    <string name="measure">Measurement</string>
    <string name="scan">scanning</string>
    <string name="connecting">connecting</string>
    <string name="pleace_connect_device">Please connect Mintti-Vision device</string>
    <string name="please_turn_on_bluetooth">Please turn on the phone bluetooth</string>
    <string name="connection_succeeded">connection succeeded</string>
    <string name="connection_failed">Connection failed</string>
    <string name="cleared_successfully">Cleared successfully</string>
    <string name="clear_cache_files">Clear cache files</string>
    <string name="share">Share</string>
    <string name="select_file_to_share">Select file to share</string>
    <string name="hint">hint!</string>
    <string name="want_disconnect">Do you want to disconnect the Bluetooth connection?</string>
    <string name="confirm">confirm</string>
    <string name="cancle">cancel</string>
    <string name="bluetooth_disconnected">bluetooth disconnected</string>
    <string name="pressurization_data">Pressurization data:</string>
    <string name="decompression_data">Decompression data:</string>
    <string name="number_of_data_points">data points:</string>
    <string name="measuring_time">Measuring time:</string>
    <string name="systolic_blood_pressure">Systolic blood pressure:</string>
    <string name="diastolic_pressure">Diastolic pressure:</string>
    <string name="test_blood_pressure">test blood pressure</string>
    <string name="blood_pressure_record">blood pressure record</string>
    <string name="test">test</string>
    <string name="heart_rate">heart rate:</string>
    <string name="stop">Stop</string>
    <string name="leak">There is an air leak, please check the air path and measure again</string>
    <string name="ok">Ok</string>
    <string name="measure_err">Measurement error, please start over</string>
    <string name="body_temperature">body temperature:</string>
    <string name="bold">bold:</string>
    <string name="environment">environment:</string>
    <string name="voltage">Voltage:</string>
    <string name="body_temperature_calibration_mode">calibration mode</string>
    <string name="blood_oxygen">blood oxygen:</string>
    <string name="average_heart_rate">Average hr:</string>
    <string name="rr_max">RR max:</string>
    <string name="rr_min">RR min:</string>
    <string name="br">Br:</string>
    <string name="hrv">Hrv:</string>
    <string name="power">Power:</string>
    <string name="firmware_version">Firmware version:</string>
    <string name="serial_number">serial number:</string>
    <string name="manufacturer">manufacturer:</string>
    <string name="firmware_upgrade_test">Firmware upgrade test</string>
    <string name="app_a001">App version number: A001</string>
    <string name="no_firmware_package">no firmware package available</string>
    <string name="firmware_upgrade">firmware upgrade</string>
    <string name="serial_number_must_be_12_digits">Serial number must be 12 digits</string>
    <string name="serial_number_written_successfully">Serial number written successfully</string>
    <string name="failed_to_write_serial_number">Failed to write serial number</string>
    <string name="firmware_updated">Please wait while the firmware is being updated</string>
    <string name="firmware_upgrade_complete">Firmware upgrade complete</string>
    <string name="firmware_upgrade_complete_restart">The firmware upgrade is complete, please restart the device</string>
    <string name="update_fail">update failed</string>
    <string name="select_firmware_upgrade_package">Select firmware upgrade package</string>
    <string name="please_enter_the_serial_number">Please enter the serial number</string>
</resources>