<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_measure_bp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/start_measure"
        android:textSize="18sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_test_bp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/test_blood_pressure"
        app:layout_constraintBottom_toTopOf="@id/bt_record"
        app:layout_constraintLeft_toLeftOf="parent"
        android:visibility="gone"
        />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/pressurization_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_bp_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="0"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/decompression_data"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/tv_bp_de"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="0"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView10"
        style="@style/common_text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/systolic_blood_pressure"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_systolic_value"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23" />

    <TextView
        android:id="@+id/tv_systolic_value"
        style="@style/common_text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="-- /mmHg"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        style="@style/common_text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/diastolic_pressure"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/tv_hr_value"
        style="@style/common_text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-- /BPM"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintStart_toStartOf="@+id/tv_diastolic_value"
        app:layout_constraintTop_toTopOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView14"
        style="@style/common_text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/heart_rate"
        app:layout_constraintEnd_toEndOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/tv_diastolic_value"
        style="@style/common_text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-- /mmHg"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="@+id/tv_systolic_value"
        app:layout_constraintTop_toTopOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/number_of_data_points"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDeDataSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/measuring_time"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        />


    <TextView
        android:id="@+id/tvSampleTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="@+id/tvDeDataSize"
        app:layout_constraintTop_toTopOf="@+id/textView11"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/tvSampleRate"
        style="@style/common_text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="--"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Switch
        android:id="@+id/switch_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:checked="false"
        android:text="@string/test"
        app:layout_constraintBottom_toTopOf="@+id/picker_hr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hr_value"
        android:visibility="gone"/>


    <NumberPicker
        android:id="@+id/picker_systolic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/bt_measure_bp"
        app:layout_constraintEnd_toStartOf="@+id/picker_diastolic"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintVertical_bias="0.8" />

    <NumberPicker
        android:id="@+id/picker_diastolic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/picker_systolic"
        app:layout_constraintEnd_toStartOf="@+id/picker_hr"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/picker_systolic"
        app:layout_constraintTop_toTopOf="@+id/picker_systolic" />

    <NumberPicker
        android:id="@+id/picker_hr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/picker_diastolic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/picker_diastolic"
        app:layout_constraintTop_toTopOf="@+id/picker_diastolic" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Systolic"
        style="@style/common_text_color"
        app:layout_constraintBottom_toTopOf="@+id/picker_systolic"
        app:layout_constraintEnd_toEndOf="@+id/picker_systolic"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/picker_systolic"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Diastolic"
        style="@style/common_text_color"
        app:layout_constraintBottom_toTopOf="@+id/picker_diastolic"
        app:layout_constraintEnd_toEndOf="@+id/picker_diastolic"
        app:layout_constraintStart_toStartOf="@+id/picker_diastolic" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Heart rate"
        style="@style/common_text_color"
        app:layout_constraintBottom_toTopOf="@+id/picker_hr"
        app:layout_constraintEnd_toEndOf="@+id/picker_hr"
        app:layout_constraintStart_toStartOf="@+id/picker_hr" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="textView15,textView13,textView9,
        picker_systolic,picker_diastolic,picker_hr"/>

    <TextView
        android:id="@+id/tvErrorRangeSys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="--"
        app:layout_constraintBottom_toBottomOf="@+id/tv_systolic_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_systolic_value"
        app:layout_constraintTop_toTopOf="@+id/tv_systolic_value"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvErrorRangeDias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="--"
        app:layout_constraintBottom_toBottomOf="@+id/tv_diastolic_value"
        app:layout_constraintStart_toStartOf="@+id/tvErrorRangeSys"
        app:layout_constraintTop_toTopOf="@+id/tv_diastolic_value"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvErrorRangeHr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="--"
        app:layout_constraintBottom_toBottomOf="@+id/tv_hr_value"
        app:layout_constraintStart_toStartOf="@+id/tvErrorRangeDias"
        app:layout_constraintTop_toTopOf="@+id/tv_hr_value"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/bt_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/blood_pressure_record"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/common_text_color"
        app:layout_constraintTop_toTopOf="@+id/switch_test"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/textView11" />


</androidx.constraintlayout.widget.ConstraintLayout>